--- a/hw_1.ipynb
+++ b/hw_1.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " 1. What is our independent variable? What is our dependent variable?"
+    " 1. What is our independent variable? What is our dependent variable?\n",
+    "- The independent variable is the color of the word. \n",
+    "- The dependent variable is the amount of time it takes to read such word out loud. "
    ]
   },
   {
@@ -65,7 +67,10 @@
     "\n",
     "# df['Diff'] = abs_diff(df['Congruent'], df['Incongruent'])\n",
     "\n",
-    "# Diff# print df['Diff']"
+    "# Diff# print df['Diff']\n",
+    "\n",
+    "x = df['Congruent']\n",
+    "y = df['Incongruent']"
    ]
   },
   {
@@ -81,18 +86,29 @@
     "mode = df.mode()\n",
     "median = df.median()\n",
     "\n",
-    "print mean\n",
-    "print '\\r '\n",
-    "print mode\n",
-    "print '\\r'\n",
-    "print median"
+    "# print mean\n",
+    "# print '\\r '\n",
+    "# print mode\n",
+    "# print '\\r'\n",
+    "# print median"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Congruent      12.669029\nIncongruent    23.011757\ndtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "output_type": "execute_result",
+     "metadata": {}
+    }
+   ],
    "source": [
     "#Variance\n",
     "\n",
@@ -108,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,9 +136,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n"
+     ]
+    }
+   ],
    "source": [
     "# p = ggplot(df, aes(x='x', y='value'))\n",
     "# p + geom_point(alpha=0.25) + \\\n",
@@ -130,7 +154,7 @@
     "# \n",
     "# p\n",
     "\n",
-    "print hi"
+    "print 'hi'"
    ]
   },
   {
@@ -142,11 +166,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "print sp.stats.ttest_ind(df['Congruent'], df['Incongruent'])"
+    "ttest= sp.stats.ttest_ind(df['Congruent'], df['Incongruent'])\n",
+    "\n",
+    "if ttest[1] >= 0.95:\n",
+    "    print 'True'\n",
+    "else:\n",
+    "    print 'False'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LeveneResult(statistic=0.2502499448677214, pvalue=0.61928406991282192)\nTtest_relResult(statistic=-8.020706944109957, pvalue=4.1030005857111781e-08)\nks_con  >>>>>>> KstestResult(statistic=1.0, pvalue=0.0)\nks_inc  >>>>>>> KstestResult(statistic=1.0, pvalue=0.0)\nKs_2sampResult(statistic=0.79166666666666674, pvalue=1.5262723360379476e-07)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print sp.stats.levene(df.Congruent, df.Incongruent)\n",
+    "print sp.stats.ttest_rel(df.Congruent, df.Incongruent)\n",
+    "\n",
+    "print 'ks_con  >>>>>>>', sp.stats.kstest(df.Congruent, 'norm')\n",
+    "print 'ks_inc  >>>>>>>', sp.stats.kstest(df.Incongruent, 'norm')\n",
+    "\n",
+    "\n",
+    "print sp.stats.ks_2samp(df.Congruent, df.Incongruent)"
    ]
   },
   {
@@ -160,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. Optional: What do you think is responsible for the effects observed? Can you think of an alternative or similar task that would result in a similar effect? Some research about the problem will be helpful for thinking about these two questions!"
+    "- 6. Optional: What do you think is responsible for the effects observed? Can you think of an alternative or similar task that would result in a similar effect? Some research about the problem will be helpful for thinking about these two questions!"
    ]
   },
   {
