--- a/home_work_final.ipynb
+++ b/home_work_final.ipynb
@@ -25,10 +25,10 @@
     "\n",
     ">Type of test\n",
     "\n",
-    "- The paired t-test was chosen to as the best test to accept or reject the null hypothoesis. The reasons why a paired t-test is appropriate in this case included the following:\n",
+    "- The paired t-test was chosen to as the best test to evaluate whether accept or reject the null hypothoesis. The reasons why a paired t-test is appropriate in this case included the following:\n",
     "\t- There are less than 30 participants.\n",
     "\t- There is one measurement variable and two nominal variables.\n",
-    "\t- The is designed to look for \"differences\" between means.\n",
+    "\t- The test is designed to look for \"differences\" between means.\n",
     "\n",
     "\n",
     "\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
      },
      "output_type": "display_data",
      "text": [
-      "<matplotlib.figure.Figure at 0x10943c410>"
+      "<matplotlib.figure.Figure at 0x1019331d0>"
      ],
      "metadata": {}
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
      },
      "output_type": "display_data",
      "text": [
-      "<matplotlib.figure.Figure at 0x1094a5750>"
+      "<matplotlib.figure.Figure at 0x10974f5d0>"
      ],
      "metadata": {}
     }
@@ -158,14 +158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\np-value: 0.00000004 \nt-test: -8.02071\nCritical value 1.71387152775\n"
+      "True\np-value: 0.00000004 \none sided p-value: 0.00000002 \nt-test: -8.02071\nt-critical value at alpha = 0.05  :   1.71387152775\n"
      ]
     }
    ],
@@ -179,20 +179,20 @@
     "## Critical Statistic Value: 0.05\n",
     "\n",
     "\n",
-    "if ttest[1] == 0.05:\n",
+    "if ttest[1] <= 0.05:\n",
     "    print 'True'\n",
     "else:\n",
     "    print 'False'\n",
     "\n",
     "print 'p-value: %.8f ' % ttest[1]\n",
     "\n",
+    "print 'one sided p-value: %.8f ' % (ttest[1]/2)\n",
+    "\n",
+    "\n",
     "print 't-test: %.5f' % ttest[0]\n",
     "\n",
-    "print 'Critical value', stats.t.ppf(1 - 0.05, 23)\n",
-    "# \n",
-    "# crit10 = stats.t.ppf(1 - 0.05], 10)\n",
-    "# \n",
-    "# print 'critical values from ppf at 5%% and  %8.4f' % (crit10)"
+    "\n",
+    "print 't-critical value at alpha = 0.05  :   {0}'.format(stats.t.ppf(1 - 0.05, 23))"
    ]
   },
   {
